--- a/Questions Arrays DSA 1.ipynb
+++ b/Questions Arrays DSA 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3da8d04",
+   "id": "ec7372ae",
    "metadata": {},
    "source": [
     "\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "498cdeb5",
+   "id": "9a9312c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9685175a",
+   "id": "beb50ba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "11e19ad7",
+   "id": "1fe74a23",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7f687fdb",
+   "id": "8cd4006c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6a5c8861",
+   "id": "c4c0f739",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "614e4a33",
+   "id": "857542aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bb9f52ea",
+   "id": "648f5309",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa717dc7",
+   "id": "16eb18e6",
    "metadata": {},
    "source": [
     "\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2395ff0a",
+   "id": "49db375b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "909a8e88",
+   "id": "e305eaae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d826e10c",
+   "id": "28748f6e",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655ea787",
+   "id": "e8ca8b89",
    "metadata": {},
    "source": [
     "\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ccb6e128",
+   "id": "f7c549c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6630c235",
+   "id": "05585a7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1aa67f99",
+   "id": "29ad3021",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec973cf4",
+   "id": "054066db",
    "metadata": {},
    "source": [
     "\n",
@@ -308,8 +308,398 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "8ad4b0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def incremsb(nums):\n",
+    "    i = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        if i == len(nums)-1:\n",
+    "            nums[i] += 1\n",
+    "    return nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cc7a5f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c0d9d6fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 4]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "incremsb(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8a807d83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,2,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1b610f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 7]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "incremsb(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033fa96b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "💡 **Q5.** You are given two integer arrays nums1 and nums2, sorted in non-decreasing order, and two integers m and n, representing the number of elements in nums1 and nums2 respectively.\n",
+    "\n",
+    "\n",
+    "Merge nums1 and nums2 into a single array sorted in non-decreasing order.\n",
+    "\n",
+    "\n",
+    "The final sorted array should not be returned by the function, but instead be stored inside the array nums1. To accommodate this, nums1 has a length of m + n, where the first m elements denote the elements that should be merged, and the last n elements are set to 0 and should be ignored. nums2 has a length of n.\n",
+    "\n",
+    "\n",
+    "**Example 1:**\n",
+    "Input: nums1 = [1,2,3,0,0,0], m = 3, nums2 = [2,5,6], n = 3\n",
+    "Output: [1,2,2,3,5,6]\n",
+    "\n",
+    "\n",
+    "**Explanation:** The arrays we are merging are [1,2,3] and [2,5,6].\n",
+    "The result of the merge is [1,2,2,3,5,6] with the underlined elements coming from nums1.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5fae79c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert(nums1, m, nums2, n):\n",
+    "    p1 = m - 1\n",
+    "    p2 = n - 1\n",
+    "    p = m + n - 1\n",
+    "\n",
+    "    while p1 >= 0 and p2 >= 0:\n",
+    "        if nums1[p1] >= nums2[p2]:\n",
+    "            nums1[p] = nums1[p1]\n",
+    "            p1 -= 1\n",
+    "        else:\n",
+    "            nums1[p] = nums2[p2]\n",
+    "            p2 -= 1\n",
+    "        p -= 1\n",
+    "\n",
+    "    while p2 >= 0:\n",
+    "        nums1[p] = nums2[p2]\n",
+    "        p2 -= 1\n",
+    "        p -= 1\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b4b7a3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums1 = [1,2,3,0,0,0] \n",
+    "m = 3\n",
+    "nums2 = [2,5,6] \n",
+    "n = 3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ab3179b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 2, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "insert(nums1, m, nums2, n)\n",
+    "print(nums1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d66c260",
+   "metadata": {},
+   "source": [
+    "\n",
+    "💡 **Q6.** Given an integer array nums, return true if any value appears at least twice in the array, and return false if every element is distinct.\n",
+    "\n",
+    "**Example 1:**\n",
+    "Input: nums = [1,2,3,1]\n",
+    "\n",
+    "Output: true\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "563aa225",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def duplicatecheck(nums):\n",
+    "    num_set = []\n",
+    "    for num in nums:\n",
+    "        if num in num_set:\n",
+    "            return True\n",
+    "        num_set.append(num)\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c2e4e3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,2,3,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bb47b688",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicatecheck(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a9c7cae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cdc192b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicatecheck(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a26a814",
+   "metadata": {},
+   "source": [
+    "<aside>\n",
+    "💡 **Q7.** Given an integer array nums, move all 0's to the end of it while maintaining the relative order of the nonzero elements.\n",
+    "\n",
+    "Note that you must do this in-place without making a copy of the array.\n",
+    "\n",
+    "**Example 1:**\n",
+    "Input: nums = [0,1,0,3,12]\n",
+    "Output: [1,3,12,0,0]\n",
+    "\n",
+    "</aside>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "51f9ab8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shiftzero(nums):\n",
+    "    j = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] != 0:\n",
+    "            nums[j] = nums[i]\n",
+    "            j += 1\n",
+    "    for i in range(j, len(nums)):\n",
+    "        nums[i] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "88ecc4eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 12, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [0, 1, 0, 3, 12]\n",
+    "shiftzero(nums)\n",
+    "print(nums) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ee548c7",
+   "metadata": {},
+   "source": [
+    "<aside>\n",
+    "💡 **Q8.** You have a set of integers s, which originally contains all the numbers from 1 to n. Unfortunately, due to some error, one of the numbers in s got duplicated to another number in the set, which results in repetition of one number and loss of another number.\n",
+    "\n",
+    "You are given an integer array nums representing the data status of this set after the error.\n",
+    "\n",
+    "Find the number that occurs twice and the number that is missing and return them in the form of an array.\n",
+    "\n",
+    "**Example 1:**\n",
+    "Input: nums = [1,2,2,4]\n",
+    "Output: [2,3]\n",
+    "\n",
+    "</aside>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "06216ff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findErrorNums(nums):\n",
+    "    xor_result = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        xor_result ^= nums[i] ^ (i + 1)\n",
+    "\n",
+    "    rightmost_set_bit = 1\n",
+    "    while rightmost_set_bit & xor_result == 0:\n",
+    "        rightmost_set_bit <<= 1\n",
+    "\n",
+    "    missing_num = 0\n",
+    "    duplicate_num = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] & rightmost_set_bit:\n",
+    "            duplicate_num ^= nums[i]\n",
+    "        if (i + 1) & rightmost_set_bit:\n",
+    "            missing_num ^= (i + 1)\n",
+    "\n",
+    "    for num in nums:\n",
+    "        if num == duplicate_num:\n",
+    "            return [duplicate_num, missing_num]\n",
+    "\n",
+    "    return [missing_num, duplicate_num]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b2bdc883",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1,2,2,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "124e21ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findErrorNums(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c67c1614",
+   "id": "7853b8ad",
    "metadata": {},
    "outputs": [],
    "source": []
